# OpenAaaS

./: .gitignore  LICENSE  README.en.md  README.md  glama.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-deployment-issue.yml  config.yml
.github/workflows/: ci.yml  release.yml
agent-core/: CHANGELOG.md  Cargo.toml  README.en.md  README.md  README_EN.md  config.toml.example  tarpaulin.toml
agent-core/executor-example/: Dockerfile  README.md  entrypoint.sh  main-agent.md  run.sh
agent-core/executor-example/pi/agent/: models.json.example
agent-core/executor-example/pi/agent/agents/: subagent.md
agent-core/executor-example/pi/agent/skills/some-skill/: SKILL.md
agent-core/src/: client.rs  config.rs  lib.rs  main.rs  main_support.rs  scheduler.rs  state.rs  test_utils.rs
agent-core/src/cmd/: detached.rs  init.rs  mod.rs  register.rs  run.rs  status.rs  stop.rs
agent-core/src/executor/: docker.rs  mod.rs
agent-core/tests/: main_integration.rs  scheduler_integration.rs
client-app/: CHANGELOG.md  README.en.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client-app/src/: App.vue
client-app/src-tauri/: Cargo.toml  tauri.conf.json
client-app/src-tauri/capabilities/: default.json
client-app/src-tauri/icons/: icon.icns
client-app/src-tauri/src/: lib.rs  main.rs
client-app/src-tauri/src/commands/: mod.rs
client-app/src/assets/: main.css
client-app/src/components/: LoadingBar.vue  SideNav.vue  Skeleton.vue  ToastContainer.vue
client-app/src/composables/: useHttp.ts
client-app/src/composables/__tests__/: useHttp.spec.ts
client-app/src/router/: index.ts
client-app/src/stores/: persist.ts  server.ts  task.ts  ui.ts
client-app/src/stores/__tests__/: server.spec.ts  task.spec.ts  ui.spec.ts
client-app/src/utils/: error.ts
client-app/src/views/: HomeView.vue  ServiceDetailView.vue  SettingsView.vue  SubmitTaskView.vue  TaskDetailView.vue  TasksView.vue
client-extension/: README.md
client-extension/kimi-plugin/: .gitignore  cancel_task.py  config.json.example  discover.py  download_result.py  get_service_usage.py  get_task.py  list_files.py  list_servers.py  list_services.py  main.py  plugin.json  pyproject.toml  register.py  remove_server.py  set_server_url.py  submit_task.py  update_profile.py  utils.py
client-extension/kimi-plugin/tests/: __init__.py  helpers.py  test_cancel_task.py  test_discover.py  test_download_result.py  test_get_service_usage.py  test_get_task.py  test_list_files.py  test_list_servers.py  test_list_services.py  test_register.py  test_remove_server.py  test_set_server_url.py  test_submit_task.py  test_update_profile.py  test_utils.py
client-extension/openaaas-mcp-adapter/: Dockerfile  PYPI_README.md  README.md  pyproject.toml
client-extension/openaaas-mcp-adapter/src/openaaas_mcp_adapter/: __init__.py  __main__.py  config.py  http_client.py  tools.py
client-extension/openaaas-mcp-adapter/tests/: test_config.py  test_http_client.py  test_tools_helpers.py  test_tools_mcp.py
client-extension/pi-extension/: .gitignore  README.md  index.ts  package.json
dash/: .gitignore  README.md  pyproject.toml
dash/src/aaas_dashboard/: __init__.py  __main__.py  app.py  client.py  components.py  config.py
dash/src/aaas_dashboard/pages/: 01_Submit_Task.py  02_Admin.py
dash/tests/: __init__.py  conftest.py  test_admin_page.py  test_app_utils.py  test_client.py  test_components.py  test_config.py  test_submit_task_page.py
server/: .env.example  CHANGELOG.md  Cargo.toml  README.en.md  README.md  config.toml.example
server/src/: auth.rs  bg_tasks.rs  cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  main_support.rs  state.rs  test_utils.rs
server/src/cmd/: detached.rs  mod.rs  run.rs  status.rs  stop.rs
server/src/handlers/: admin.rs  agent.rs  client.rs  discovery.rs  files.rs  mod.rs  services.rs
server/src/models/: file.rs  mod.rs  service.rs  task.rs  user.rs
server/tests/: agent_api.rs  agent_api_test.rs  integration_test.rs  main_integration.rs
server/tests/common/: mod.rs
server/tests/integration/: admin_api.rs  client_api.rs  files_api.rs  mod.rs  services_api.rs
