[project]
name = "open-aaas-dashboard"
version = "0.5.0"
description = "OpenAaaS Dashboard - A Streamlit-based web UI for monitoring tasks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "IDM Explorer Lab"}
]
keywords = ["oaas", "dashboard", "streamlit", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "toml>=0.10.2",
    "streamlit-autorefresh>=1.0.0",
]

[project.scripts]
aaas-dashboard = "aaas_dashboard.__main__:main"

[project.urls]
Homepage = "https://github.com/Wolido/OpenAaaS/dash"
Repository = "https://github.com/Wolido/OpenAaaS/dash"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aaas_dashboard"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "freezegun>=1.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.0.2",
    "responses>=0.26.0",
]
