[package]
name = "open-aaas-server"
version = "0.3.1"
edition = "2024"

[dependencies]
# Web框架
axum = { version = "0.8", features = ["ws", "multipart"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ID生成
uuid = { version = "1.10", features = ["v4", "serde"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 中间件
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "timeout"] }

# 环境变量加载
dotenvy = "0.15"

# 配置管理
config = "0.15"
toml = "0.8"

# CLI
clap = { version = "4.0", features = ["derive"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# Webhook签名
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# URL编码
urlencoding = "2.1"

# 流式 IO
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
