[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "cancel_task",
    "discover",
    "download_result",
    "get_service_usage",
    "get_task",
    "list_files",
    "list_servers",
    "list_services",
    "register",
    "remove_server",
    "set_server_url",
    "submit_task",
    "update_profile",
    "utils",
]

[project]
name = "kimi-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
